Footer white space fix

--- a/wp-content/themes/pacific-beach-mobile/css/style.css
+++ b/wp-content/themes/pacific-beach-mobile/css/style.css
@@ -1883,7 +1883,7 @@ div.ps-toolbar-play {
 	background-size: cover;
 	position: relative;
 	padding: 0px;
-	/*height: 100%;*/
+	height: 100%;
 }
 
 #sitewrap:before {
